# minesweeper

./: CMakeLists.txt  README.md
files/: config.cfg  leaderboard.txt
src/: GameWindow.cpp  LeaderboardWindow.cpp  Player.hpp  Tile.hpp  WelcomeWindow.cpp  constants.hpp  main.cpp  readConfig.hpp
